# snapllm

./: .dockerignore  .gitignore  BUILD_OUTPUTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPER_GUIDE.md  Dockerfile  LICENSE  LinuxBuildGPU_Install_Guide.md  QUICKSTART.md  README.md  RELEASE.md  Start_Server.bat  build.sh  build_cpu.bat  build_desktop.bat  build_gpu.bat  docker-compose.yml  package.bat  package_release.bat  package_release.sh  start_frontend.bat  start_server.sh
.github/workflows/: ci.yml  release.yml
bindings/: CMakeLists.txt  README.md  snapllm_bindings.cpp
desktop-app/: DOCUMENTATION.md  README.md  create-icon.ps1  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop-app/src/: App.tsx  index.css  vite-env.d.ts
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: main.rs
desktop-app/src/components/: CommandPalette.tsx  EmptyState.tsx  ErrorAlert.tsx  ErrorBoundary.tsx  LoadingScreen.tsx
desktop-app/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
desktop-app/src/components/models/: ModelQuickSwitcher.tsx
desktop-app/src/components/ui/: MarkdownRenderer.tsx  index.tsx
desktop-app/src/hooks/: useApi.ts
desktop-app/src/lib/: api.ts
desktop-app/src/pages/: About.tsx  Agents.tsx  ApiDocs.tsx  ApiKeys.tsx  Audit.tsx  BatchProcessing.tsx  Chat.tsx  Compare.tsx  Contexts.tsx  Dashboard.tsx  Help.tsx  Images.tsx  Metrics.tsx  Models.tsx  Playground.tsx  QuickSwitch.tsx  RAGPlaceholder.tsx  Security.tsx  Settings.tsx  Team.tsx  Video.tsx  Vision.tsx  Workflows.tsx
desktop-app/src/store/: index.ts
desktop-app/src/types/: index.ts
desktop-app/src/utils/: chainOfThought.ts
docs/: API.ison  MCB_SPECIFICATION.md  vPID_L2_Context_KV_Cache_Architecture.md  vPID_L2_Impact_Analysis.md  vPID_L2_Implementation_Strategy.md  vPID_Workspace_Architecture.md
examples/: README.md  basic_usage.py  context_caching.py  multi_model_switching.py
include/snapllm/: auto_tiering.h  compression.h  context_manager.h  dequant_cache.h  diffusion_bridge.h  file_cache_store.h  kv_cache.h  kv_cache_extractor.h  model_context_registry.h  model_manager.h  model_types.h  multimodal_bridge.h  prefetch_engine.h  server.h  tiered_memory_allocator.h  unified_model_manager.h  validation.h  vpid_bridge.h  vpid_hot_cache.h  vpid_tensor_cache.h  vpid_workspace.h  websocket.h  workspace_metadata.h  workspace_paths.h
include/snapllm/interfaces/: i_cache_store.h  i_memory_allocator.h  i_resource_manager.h  interfaces.h
include/snapllm/ison/: ison.hpp  ison_formatter.hpp  ison_parser.hpp  ison_prompts.hpp  isonantic.hpp
scripts/: ci_smoke_test.ps1  ci_smoke_test.sh  e2e_smoke_test.ps1  model_smoke_test.ps1  model_smoke_test.sh
src/: CMakeLists.txt  auto_tiering.cpp  compression.cpp  context_manager.cpp  dequant_cache.cpp  diffusion_bridge.cpp  file_cache_store.cpp  main.cpp  model_context_registry.cpp  model_manager.cpp  multimodal_bridge.cpp  prefetch_engine.cpp  server.cpp  snapllm.rc  tiered_memory_allocator.cpp  unified_model_manager.cpp  validation.cpp  vpid_bridge.cpp  vpid_hot_cache.cpp  vpid_tensor_cache.cpp  vpid_workspace.cpp  workspace_metadata.cpp
tests/: benchmark_switching.cpp
