[package]
name = "snapllm-desktop"
version = "0.1.0"
description = "SnapLLM Desktop - Multi-Model LLM Serving Platform"
authors = ["SnapLLM Team"]
license = "MIT"
repository = "https://github.com/snapllm/snapllm"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "http-request", "fs-exists", "fs-copy-file", "fs-create-dir", "fs-read-dir", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

